# AgentOps

./: .env.example  .gitignore  README.md  docker-compose.yml  e2e_test.py  test_e2e.sh
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
agentops-server/: Dockerfile  README.md  docker-compose.yml  init-monitor-readonly.sh  pom.xml
agentops-server/src/main/java/com/agentops/: AgentOpsApplication.java
agentops-server/src/main/resources/: application-docker.yml  application.yml
agentops-server/src/test/resources/: application.yml
cli/: README.md  pyproject.toml
cli/scripts/: generate_shell_completion.sh
cli/src/agentops/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  sse.py
cli/src/agentops/commands/: __init__.py  config.py  diagnose.py  knowledge.py  session.py
cli/src/agentops/formatters/: __init__.py  output.py  trace.py
cli/tests/: __init__.py  test_auth.py  test_knowledge.py  test_session.py
docs/: agentops-完整解决方案.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  DiagnosisPage.tsx  HistoryPage.tsx  KnowledgePage.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: api.ts
infrastructure/helm/agentops/: Chart.yaml  values.yaml
infrastructure/helm/agentops/templates/: deployment.yaml  ingress.yaml  secrets.yaml
sql/: monitor-schema.sql  schema.sql  seed-data.sql
(+62 files in other folders)
